--- a/utils/start-stop-daemon.8
+++ b/utils/start-stop-daemon.8
@@ -184,6 +184,12 @@ Chdir and chroot to
 before starting the process. Please note that the pidfile is also written
 after the chroot.
 .TP
+\fB-d\fP|\fB--chdir\fP \fIpath\fP
+Chdir to
+.I path
+before starting the process. This is done after the chroot if the
+\fB-r\fP|\fB--chroot\fP option is set.
+.TP
 .BR -b | --background
 Typically used with programs that don't detach on their own. This option
 will force
