--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,39 @@ dpkg (1.10.16) unstable; urgency=low
     When --start, --startas and --pidfile are given, print 'process'
     instead of '(null)' for the process name, if it's already running.
     Closes: #209355
+  * Imported several translated manpages, from debian-doc cvs:
+    * Spanish: 822-date.1 cleanup-info.8 deb-control.5 deb-old.5
+      deb.5 dpkg-checkbuilddeps.1 dpkg-deb.1 dpkg-divert.8 dpkg-name.1
+      dpkg-scanpackages.8 dpkg-split.8 dpkg-statoverride.8 dpkg.8
+      dselect.8 md5sum.1 start-stop-daemon.8 update-alternatives.8
+      "Esteban Manchado Velázquez" <zoso@debian.org>: Closes: #171489
+    * French: deb.5
+      Julien Louis <arthur51@ifrance.com>: Closes: #164906
+    * Portuguese: dpkg.8 dselect.8
+  * Matt Zimmerman <mdz@debian.org>
+    In dpkg's manpage, -O had an inverted word.  Closes: #111711
+  * Marcin Owsiany <porridge@debian.org>:
+    Fix Polish translation of 'conflicts with'  Closes: #112057
+  * Jiri Masik <masik@darbujan.fzu.cz>:
+    Improve Czech translation of: "dpkg - warning: ignoring request to
+    remove %s which isn't installed."  Closes: #117518
+  * Marco Nenciarini <mnencia@prato.linux.it>:
+    Fix missing space in Italian translation when listing files, and the
+    file is diverted.  Closes: #138244
+  * Piotr Roszatycki <Piotr_Roszatycki@netia.net.pl>:
+    Update Polish translation.  Closes: #142370
+  * Martin Quinson <mquinson@ens-lyon.fr>:
+    Fix missing space in French translation of: "%s - warning: downgrading
+    %.250s from %.250s to %.250s.\n"  Closes: #149142
+  * Hidetaka Iwai <tyuyu@sings.jp>:
+    Fix typo in Japanese translation of dpkg --force-help; dowgrade ->
+    downgrade:  Closes: #157819
+  * Martin Quinson <mquinson@ens-lyon.fr>:
+    Fix French translation when listing files, and the file is diverted.
+    Closes: #162154
+  * Rune Schjellerup <olberd@odense.kollegienet.dk>:
+    Fix Danish translation of(was missing the leading space): " does not
+    appear to be available\n"  Closes: #192972
 
  -- Adam Heath <doogie@debian.org>  UNRELEASED
 
