--- a/main/dpkg.8
+++ b/main/dpkg.8
@@ -466,7 +466,7 @@ Changing \fBroot\fP changes \fBinstdir\fP to \fIdir\fP and
 Only process the packages that are selected for installation. The
 actual marking is done with \fBdselect\fP or by \fBdpkg\fP, when it
 handles packages.  For example, when a package is removed, it will
-be marked selected for installation.
+be marked selected for deinstallation.
 .TP
 .BR -E " | " --skip-same-version
 Don't install the package if the same version of the package is already
