--- a/po/fr.po
+++ b/po/fr.po
@@ -1197,7 +1197,7 @@ msgstr "Version %.250s de %.250s déjà installée, paquet ignoré.\n"
 #, c-format
 msgid "%s - warning: downgrading %.250s from %.250s to %.250s.\n"
 msgstr ""
-"%s - avertissement : %.250s mis à jour de la version %.250svers l'ancienne "
+"%s - avertissement : %.250s mis à jour de la version %.250s vers l'ancienne "
 "version %.250s.\n"
 
 #: main/archives.c:980
@@ -3242,7 +3242,7 @@ msgstr "détourné localement"
 
 #: main/query.c:350
 msgid "package diverts others"
-msgstr "paquet détournant d'autres"
+msgstr "paquet détournant les autres"
 
 #: main/query.c:351
 #, c-format
@@ -3252,7 +3252,7 @@ msgstr "détourné par %s"
 #: main/query.c:352
 #, c-format
 msgid " to: %s\n"
-msgstr "vers : %s\n"
+msgstr " vers : %s\n"
 
 #: main/query.c:371
 msgid ""
