--- a/po/pl.po
+++ b/po/pl.po
@@ -4,9 +4,9 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: dpkg 1.6.12\n"
+"Project-Id-Version: dpkg 1.9.20\n"
 "POT-Creation-Date: 2002-05-27 19:05+0200\n"
-"PO-Revision-Date: 2000-04-19 02:10+0200\n"
+"PO-Revision-Date: 2002-04-11 16:04+0200\n"
 "Last-Translator: Piotr Roszatycki <dexter@debian.org>\n"
 "Language-Team: Polish\n"
 "MIME-Version: 1.0\n"
@@ -493,14 +493,14 @@ msgid "wait for %s failed"
 msgstr "b³±d funkcji `wait' dla %s"
 
 #: lib/mlib.c:145
-#, fuzzy, c-format
+#, c-format
 msgid "unable to read filedescriptor flags for %.250s"
-msgstr "nie mo¿na otworzyæ pliku opisu opcji `%.250s'"
+msgstr "nie mo¿na odczytaæ flag filedescriptor dla `%.250s'"
 
 #: lib/mlib.c:147
-#, fuzzy, c-format
+#, c-format
 msgid "unable to set close-on-exec flag for %.250s"
-msgstr "nie mo¿na zamkn±æ pliku nowej opcji `%.250s'"
+msgstr "nie mo¿na ustawiæ flagi close-on-exec dla `%.250s'"
 
 #: lib/mlib.c:199
 #, fuzzy
@@ -769,9 +769,8 @@ msgid "version string is empty"
 msgstr "ci±g znaków dla numeru wersji jest pusty"
 
 #: lib/parsehelp.c:205
-#, fuzzy
 msgid "version string has embedded spaces"
-msgstr "ci±g znaków dla numeru wersji jest pusty"
+msgstr "ci±g znaków dla numeru wersji zawiera spacje"
 
 #: lib/parsehelp.c:210
 msgid "epoch in version is not number"
@@ -1095,12 +1094,12 @@ msgstr "--%s wymaga co najmniej jednego argumentu bêd±cego plikiem archiwum"
 #: main/archives.c:943
 #, c-format
 msgid "Selecting previously deselected package %s.\n"
-msgstr "Zaznaczenie poprzednio nieznaznaczonego pakietu %s.\n"
+msgstr "Zaznaczenie poprzednio niezaznaczonego pakietu %s.\n"
 
 #: main/archives.c:948
 #, c-format
 msgid "Skipping deselected package %s.\n"
-msgstr "Pominiêcie nieznaznaczonego pakietu %s.\n"
+msgstr "Pominiêcie niezaznaczonego pakietu %s.\n"
 
 #: main/archives.c:962
 #, c-format
@@ -1489,7 +1488,7 @@ msgstr " poleca "
 
 #: main/depcon.c:137
 msgid " conflicts with "
-msgstr " konfliktuje z "
+msgstr " w konflikcie z "
 
 #: main/depcon.c:138
 msgid " suggests "
@@ -1986,9 +1985,8 @@ msgid "not installed but configs remain"
 msgstr "nie zainstalowany ale pliki konfiguracyjne pozosta³y"
 
 #: main/help.c:87
-#, fuzzy
 msgid "dpkg - error: PATH is not set.\n"
-msgstr "dpkg - ostrze¿enie: zmienna PATH jest nie ustawiona.\n"
+msgstr "dpkg - b³±d: zmienna PATH jest nie ustawiona.\n"
 
 #: main/help.c:102
 #, c-format
