Fix handling of large files.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Sep 20 21:17:45 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * utils/md5sum.c: Fix handling of large files.
+
 Sat Sep 20 20:42:35 CDT 2003 Adam Heath <doogie@debian.org>
 
   * man/*
