--- a/debian/changelog
+++ b/debian/changelog
@@ -49,6 +49,7 @@ dpkg (1.10.16) unstable; urgency=low
   * Rune Schjellerup <olberd@odense.kollegienet.dk>:
     Fix Danish translation of(was missing the leading space): " does not
     appear to be available\n"  Closes: #192972
+  * Fix md5sum when handling large files.  Closes: #162691
 
  -- Adam Heath <doogie@debian.org>  UNRELEASED
 
