Set release date for 1.10.16.

--- a/debian/changelog
+++ b/debian/changelog
@@ -51,7 +51,7 @@ dpkg (1.10.16) unstable; urgency=low
     appear to be available\n"  Closes: #192972
   * Fix md5sum when handling large files.  Closes: #162691
 
- -- Adam Heath <doogie@debian.org>  UNRELEASED
+ -- Adam Heath <doogie@debian.org>  Tue, 23 Sep 2003 12:12:38 -0500
 
 dpkg (1.10.15) unstable; urgency=low
 
