Almost *EVERY* damn file was including config.h in the wrong spot.  After making it the first include, then off_t/size_t/etc could actually be redefined to be 64-bit compatible.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,11 @@
+Sat Oct 25 15:02:27 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * almost all .c files: Almost *EVERY* damn file was including config.h in
+    the wrong spot.  After making it the first include, then
+    off_t/size_t/etc could actually be redefined to be 64-bit compatible.
+
 Sat Oct 25 12:47:22 CDT 2003 Adam Heath <doogie@debian.org>
+
   * scripts/dpkg-checkbuilddeps.pl: Fix dpkg-checkbuilddeps calling of
     parsedep.  It wasn't setting use_arch.
 
