Change limit and the return value for buffer_copy to off_t, which fixes large file handling.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Oct 25 15:04:41 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * lib/mlib.c, include/dpkg.h.in, utils/md5sum.c: Change limit and the
+    return value for buffer_copy to off_t, which fixes large file handling.
+
 Sat Oct 25 15:02:27 CDT 2003 Adam Heath <doogie@debian.org>
 
   * almost all .c files: Almost *EVERY* damn file was including config.h in
