Tag for 1.10.16 release date(for real this time).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Oct 25 15:46:16 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * debian/changelog: Tag for 1.10.16 release date(for real this time).
+
 Sat Oct 25 15:45:48 CDT 2003 Adam Heath <doogie@debian.org>
 
   * scripts/install-info.pl: Change formatting of info.dir.
