* scripts/dpkg-checkbuilddeps.pl: s/dpkg-checkbuild/dpkg-checkbuilddeps/   in usage. * version-nr: Bump to 1.10.17. * debian/changelog: Make the date UNRELEASED.

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,10 @@ dpkg (1.10.17) unstable; urgency=medium
   * Make dselect do conflict resolution when dealing with automatically
     selected recommended package. Thanks to Colin Watson for the analysis
     and patch. Closes: Bug#151663
+  * Branden Robinson <branden@debian.org>:
+    s/dpkg-checkbuild/dpkg-checkbuilddeps/ in usage.
 
- -- Wichert Akkerman <wakkerma@debian.org>  Sun, 26 Oct 2003 14:58:55 +0100
+ -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
 dpkg (1.10.16) unstable; urgency=low
 
