Add -u -a<arch> commands.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Oct 27 09:49:29 CST 2003 Adam Heath <doogie@debian.org>
+
+  * scripts/dpkg-scanpackages.pl: Add -u -a<arch> commands.
+
 Mon Oct 27 09:42:57 CST 2003 Adam Heath <doogie@debian.org>
 
   * scripts/dpkg-checkbuilddeps.pl: Set $reduce_arch when calling parsedep.
