Add .#* to the default ignore filter.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Oct 27 10:57:54 CST 2003 Adam Heath <doogie@debian.org>
+
+  * scripts/dpkg-source.pl: Add .#* to the default ignore filter.
+
 Mon Oct 27 09:49:29 CST 2003 Adam Heath <doogie@debian.org>
 
   * scripts/dpkg-scanpackages.pl: Add -u -a<arch> commands.
