Don't assume /usr/info/dir exists if /usr/info does.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Oct 27 11:06:25 CST 2003 Adam Heath <doogie@debian.org>
+
+  * debian/dpkg.postinst: Don't assume /usr/info/dir exists if /usr/info
+    does.
+
 Mon Oct 27 10:57:54 CST 2003 Adam Heath <doogie@debian.org>
 
   * scripts/dpkg-source.pl: Add .#* to the default ignore filter.
