--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,8 @@ dpkg (1.10.17) unstable; urgency=medium
     Add -u in dpkg-scanpackages.  Closes: #214123.
     Add -a<arch> command to dpkg-scanpackages.
   * Add .#* to dpkg-source's default ignore filter.  Closes: #217380.
+  * Matthias Urlichs <smurf@smurf.noris.de>:
+    Don't assume /usr/info/dir exists if /usr/info does.  Closes: #165770.
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
