--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,8 @@ dpkg (1.10.17) unstable; urgency=medium
   * Add .#* to dpkg-source's default ignore filter.  Closes: #217380.
   * Matthias Urlichs <smurf@smurf.noris.de>:
     Don't assume /usr/info/dir exists if /usr/info does.  Closes: #165770.
+  * Jordi Mallach <jordi@debian.org>:
+    Update Catalan translation.
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
