Update dpkg conflicts to << 1.10, instead of 1.9.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.10.19) unstable; urgency=medium
+
+  * Update dpkg conflicts to << 1.10, instead of 1.9.  Closes: #190611.
+
+ -- Adam Heath <doogie@debian.org>  UNRELEASED
+
 dpkg (1.10.18) unstable; urgency=medium
 
   * Rebuild, tagging and releasing correctly from cvs this time.
