--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.10.19) unstable; urgency=low
+
+  * 
+
+ -- Scott James Remnant <scott@netsplit.com>  UNRELEASED
+
 dpkg (1.10.18.1) unstable; urgency=medium
 
   * Non-maintainer upload to fix release-critical bugs.
