Apply patch to fix #217943 and, #235266, build conflicts were being pushed into @unmet instead of @conflicts (probably due to a bad copy & paste).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sun Feb 29 21:56:25 GMT 2004 Scott James Remnant <scott@netsplit.com>
+
+  * scripts/dpkg-checkbuilddeps.pl: Push build-conflicts errors into
+  @conflicts instead of @unmet, this looks like an accidental error
+  introduced by bad copy&pasteing.
+
 Mon Mar  8 17:26:06 GMT 2004 Scott James Remnant <scott@netsplit.com>
 
   * debian/changelog, version-nr: Bump to 1.10.19.
