--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dpkg (1.10.19) unstable; urgency=low
 
-  * 
+  * Distinguish unmet build dependencies from build conflicts.
+    Closes: #217943, #235266.
 
  -- Scott James Remnant <scott@netsplit.com>  UNRELEASED
 
