Apply patch from Colin Watson to fix #139781; dselect had a hard-coded maximum window width of 179 chars for some things, when COLS is easily available.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Mar  8 10:14:27 GMT 2004 Colin Watson <cjwatson@debian.org>
+ 
+  * dselect/methlist.cc, dselect/pkgdisplay.cc: Set the total display width
+  to the maximum of TOTAL_LIST_WIDTH and COLS, improving display on wide
+  terminals.
+
 Thu Mar  4 13:28:11 GMT 2004 Scott James Remnant <scott@netsplit.com>
 
   * lib/tarfn.c: Copy the Name and LinkName elements and ensure they
