--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ dpkg (1.10.19) unstable; urgency=low
   * Distinguish unmet build dependencies from build conflicts.
     Closes: #217943, #235266.
   * Force NULL-termination of all tar file entry names.  Closes: #232025.
+  * Allow dselect to use the full window width.  Closes: #139781.
 
  -- Scott James Remnant <scott@netsplit.com>  UNRELEASED
 
