--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Mar  8 16:49:13 GMT 2004 Christian Haggstrom <chm@c00.info>
+
+  * lib/mlib.c: Remove extraneous %s in ohshite() call when out of
+  disk space so that condition gets handled correctly and not with
+  a SEGV.
+
 Mon Mar  8 10:14:27 GMT 2004 Colin Watson <cjwatson@debian.org>
  
   * dselect/methlist.cc, dselect/pkgdisplay.cc: Set the total display width
