Fix uploaders and add myself.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Mar  8 18:10:06 GMT 2004 Scott James Remnant <scott@netsplit.com>
+
+  * debian/control: Remove duplicated uploaders field and add myself
+  to the one that's left.
+
 Mon Mar  8 16:49:13 GMT 2004 Christian Haggstrom <chm@c00.info>
 
   * lib/mlib.c: Remove extraneous %s in ohshite() call when out of
