Close the bug for that last commit.

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ dpkg (1.10.19) unstable; urgency=low
   * Allow dselect to use the full window width.  Closes: #139781.
   * Pass correct number of arguments for format string when out of disk
     space.  Closes: #213038, #217286, #213543, #213846.
+  * Remove duplicated entries from ChangeLog.  Closes: #157437.
 
  -- Scott James Remnant <scott@netsplit.com>  UNRELEASED
 
