--- a/THANKS
+++ b/THANKS
@@ -25,6 +25,7 @@ Ian Jackson <ian@chiark.greenend.org.uk>
 Ian Murdock <imurdock@debian.org>
 Ivo Timmermans <itimmermans@bigfoot.com>
 J.H.M. Dassen <jdassen@cistron.nl>
+Javier Fernandez-Sanguino Pena <jfs@computer.org>
 Jim Pick <jim@jimpick.com>
 Jim Van Zandt <jrv@vanzandt.mv.com>
 Joel Klecker <jk@espy.org>
