Apply patch from Robert Millan to fix #211566; update support for Debian FreeBSD.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Mar  8 18:28:07 GMT 2004 Robert Millan <rmh@debian.org>
+
+  * archtable, configure.in, scripts/dpkg-architecture.pl: Update
+  support for Debian FreeBSD.
+
 Mon Mar  8 18:20:38 GMT 2004 Javier Fernandez-Sanguino Pena <jfs@computer.org>
 
   * scripts/dpkg-buildpackage.sh: Add blank line to .dsc before
