--- a/THANKS
+++ b/THANKS
@@ -53,6 +53,7 @@ Philippe Batailler <pbatailler@teaser.fr>
 Piotr Roszatycki <dexter@fnet.pl>
 Raphael Hertzog <rhertzog@hrnet.fr>
 Richard Kettlewell <rjk@sfere.greenend.org.uk>
+Robert Millan <rmh@debian.org>
 Roderick Schertler <roderick@argon.org>
 Roman Hodek <Roman.Hodek@informatik.uni-erlangen.de>
 Scott Barker <scott@mostlylinux.ab.ca>
