--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ dpkg (1.10.19) unstable; urgency=low
     space.  Closes: #213038, #217286, #213543, #213846.
   * Remove duplicated entries from ChangeLog.  Closes: #157437.
   * Fix dpkg-buildpackage when used with PGP.  Closes: #232916.
+  * Update support for Debian FreeBSD.  Closes: #211566.
 
  -- Scott James Remnant <scott@netsplit.com>  UNRELEASED
 
