Apply patch from mrvn to fix #228253; keep architecture in the status file.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Mar  8 18:34:16 GMT 2004 Goswin Brederlow <brederlo@informatik.uni-tuebingen.de>
+
+  * lib/parse.c, main/processarc.c: Store Architecture in the status file
+  and don't remove it when processing.  This is a first step towards
+  multi-arch support in a future release of Debian.
+
 Mon Mar  8 18:28:07 GMT 2004 Robert Millan <rmh@debian.org>
 
   * archtable, configure.in, scripts/dpkg-architecture.pl: Update
