--- a/THANKS
+++ b/THANKS
@@ -17,6 +17,7 @@ Darren Stalder <torin@daft.com>
 David Huggins-Daines <dhd@debian.org>
 Erick Branderhorst <branderhorst@heel.fgg.eur.nl>
 Galen Hazelwood <galenh@debian.org>
+Goswin Brederlow <brederlo@informatik.uni-tuebingen.de>
 Guy Maor <maor@debian.org>
 Hartmut Koptein <koptein@naffel.de>
 Heiko Schlittermann <heiko@lotte.sax.de>
