--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ dpkg (1.10.19) unstable; urgency=low
   * Remove duplicated entries from ChangeLog.  Closes: #157437.
   * Fix dpkg-buildpackage when used with PGP.  Closes: #232916.
   * Update support for Debian FreeBSD.  Closes: #211566.
+  * Store Architecture in the status file.  Closes: #228253.
 
  -- Scott James Remnant <scott@netsplit.com>  UNRELEASED
 
