Apply patch from Brian Carlson to fix #170953; don't print offending data in md5sum, it may not be NULL terminated.

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ dpkg (1.10.19) unstable; urgency=low
   * Fix dpkg-buildpackage when used with PGP.  Closes: #232916.
   * Update support for Debian FreeBSD.  Closes: #211566.
   * Store Architecture in the status file.  Closes: #228253.
+  * Don't print offending lines in md5sum.  Closes: #170953.
 
  -- Scott James Remnant <scott@netsplit.com>  UNRELEASED
 
