Date the release

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,7 +13,7 @@ dpkg (1.10.19) unstable; urgency=low
   * Don't print offending lines in md5sum.  Closes: #170953.
   * Check bounds of md5sum lines.  Closes: #168443, #199489, #199693.
 
- -- Scott James Remnant <scott@netsplit.com>  UNRELEASED
+ -- Scott James Remnant <scott@netsplit.com>  Mon,  8 Mar 2004 19:05:32 +0000
 
 dpkg (1.10.18.1) unstable; urgency=medium
 
