Argh, will need a high urgency to get in before freeze.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.10.19) unstable; urgency=low
+dpkg (1.10.19) unstable; urgency=high
 
   * Distinguish unmet build dependencies from build conflicts.
     Closes: #217943, #235266.
