--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Mar  8 19:37:00 GMT 2004 Scott James Remnant <scott@netsplit.com>
+
+  * version-nr, debian/changelog: Bump version to 1.10.20.
+
 Mon Mar  8 19:02:25 GMT 2004 Andrew Suffield <asuffield@debian.org>
 
   * utils/md5sum.c: Check the bounds of the line before processing.
