Update various translations.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 dpkg (1.10.20) unstable; urgency=low
 
-  * 
+  * Update Japanese translation.  Closes: #224616
+  * Update French translation.  Closes: #218713
+  * Fix spelling error in German md5sum man page.  Closes: #230750
+  * Fix typo in pt_BR po file.  Closes: #192102
 
  -- Scott James Remnant <scott@netsplit.com>  UNRELEASED
 
