--- a/man/fr/deb-control.5
+++ b/man/fr/deb-control.5
@@ -199,16 +199,17 @@ Pre-Depends: libc6 (>= 2.0.105)
 Provides: rgrep
 Conflicts: rgrep
 Description: GNU grep, egrep and fgrep.
- Il se peut que le grep de la famille GNU des utilitaires grep soit le plus
- rapide de l'ouest ! Le grep de GNU est fondé sur un mécanisme rapide de mise 
- en correspondance déterministe d'états simples (environ deux fois plus rapide
- que le « egrep » standard d'Unix), modifié par une recherche de type
- Boyer-Moore-Gosper qui cherche une chaîne donnée en empêchant que les textes
- impossibles soient analysés par le mécanisme de mise en correspondance 
- d'expressions régulières et sans avoir nécessairement besoin de voir chaque
- caractère. C'est beaucoup plus rapide que les « grep » ou « egrep » d'Unix.
- (Des expressions régulières contenant des références circulaires ralentissent
- cependant le programme.)
+ Il se peut que le grep de la famille GNU des utilitaires grep soit 
+ le plus rapide de l'ouest ! Le grep de GNU est fondé sur un mécanisme 
+ rapide de mise en correspondance déterministe d'états simples (environ 
+ deux fois plus rapide que le « egrep » standard d'Unix), modifié par une 
+ recherche de type Boyer-Moore-Gosper qui cherche une chaîne donnée en 
+ empêchant que les textes impossibles soient analysés par le mécanisme de 
+ mise en correspondance d'expressions régulières et sans avoir 
+ nécessairement besoin de voir chaque caractère. C'est beaucoup plus 
+ rapide  que les « grep » ou « egrep » d'Unix.
+ (Des expressions régulières contenant des références circulaires 
+ ralentissent cependant le programme.)
 .fi
 .\" .RE
 .SH VOIR AUSSI
@@ -216,4 +217,4 @@ Description: GNU grep, egrep and fgrep.
 .BR dpkg (8),
 .BR dpkg-deb (1).
 .SH TRADUCTION
-Philippe Batailler, Dec 2000.
+Philippe Batailler, Octobre 2003.
