--- a/man/fr/dpkg-scanpackages.8
+++ b/man/fr/dpkg-scanpackages.8
@@ -20,6 +20,8 @@ dpkg-scanpackages \- créer des fichiers «\ Packages\ »
 .
 .SH SYNOPSIS
 .B dpkg-scanpackages
+.RI [ -u ]
+.RI [ -a<arch> ]
 .I rep-de-binaires
 .I fichier-d'-override
 .RI [ chemin-à-préfixer ]
@@ -30,8 +32,9 @@ dpkg-scanpackages \- créer des fichiers «\ Packages\ »
 .B dpkg-scanpackages
 trie une arborescence contenant des paquets binaires Debian et crée un fichier
 «\ Packages\ » qui permettra à
-.BR dselect (8)
-de dire à un utilisateur quels sont les paquets qu'il peut installer.
+.BR dselect (8),
+ou à un autre programme, de dire à un utilisateur quels sont les paquets 
+qu'il peut installer.
 Ces fichiers «\ Packages\ » sont semblables à ceux qu'on peut trouver sur les 
 sites d'archives Debian ou sur des cédéroms.
 Quand on crée un répertoire contenant des paquets qu'on veut installer sur
@@ -42,21 +45,29 @@ un ensemble de machines, on peut se servir soi-même de
 est le nom de l'arborescence binaire (par exemple
 .BR contrib/binary-i386)
 que l'on veut traiter.
-Il vaut mieux qu'elle soit relative à la racine de l'archive Debian ;
+Il vaut mieux qu'elle soit relative à la racine de l'archive Debian\ ;
 ainsi chaque champ «\ Filename\ » dans le nouveau fichier «\ Packages\ »
 commencera par cette chaîne.
 .PP
 .I fichier-d'-override
 est le nom du fichier qui contient les renseignements sur la manière dont le
-paquet s'insère dans la distribution ; voir ci-dessous.
+paquet s'insère dans la distribution\ ; voir ci-dessous.
 .PP
 .I chemin-à-préfixer
 est une chaîne facultative qui préfixera les champs «\ Filename\ ».
+.PP
+Si l'option
+.I -u
+est spécifiée, la commande recherche des *.udeb au lieu de *.deb.
+.PP
+Quand -a\fI<arch>\fP est spécifiée, la commande ne recherche pas tous les
+fichiers debs\ ; elle utilise un motif équivalent à *_all.deb et à *_arch.deb.
+
 .SH LE FICHIER « OVERRIDE »
 Bien que l'on puisse trouver dans le fichier «\ control\ » la plupart
 des informations concernant un paquet, certaines doivent être inscrites
 par les tsars de la distribution plutôt que par le responsable du
-paquet : elles ont trait à l'organisation des fichiers en vue de la
+paquet\ : elles ont trait à l'organisation des fichiers en vue de la
 publication plutôt qu'aux dépendances réelles ou à la
 description du paquet. Ces informations se trouvent dans le fichier
 «\ override\ ».
@@ -80,7 +91,7 @@ Les éléments
 .I priorité
 et
 .I section
-placent le paquet dans l'arborescence ; on ne devrait pas les trouver
+placent le paquet dans l'arborescence\ ; on ne devrait pas les trouver
 dans le  fichier «\ control\ ». Quand le paquet se trouve dans un 
 sous-répertoire de  
 .IR rep-de-binaires,
@@ -114,8 +125,4 @@ pas s'appliquer.
 .BR dselect (8),
 .BR dpkg-scansources (8).
 .SH TRADUCTION
-Philippe Batailler <pbatailler@teaser.fr>, Mai 2002.
-
-
-
-
+Philippe Batailler <pbatailler@teaser.fr>, Octobre 2003.
