--- a/man/fr/dpkg.8
+++ b/man/fr/dpkg.8
@@ -1,5 +1,5 @@
-.\" traduction de la révision CVS 1.32
-.TH DPKG 8 "April 12, 1998" "Debian Project" "dpkg suite"
+.\" traduction de la révision CVS 1.33
+.TH DPKG 8 "February 2000" "Debian Project" "dpkg suite"
 .SH NOM
 dpkg \- un gestionnaire de paquet de niveau intermédiaire pour Debian
 .SH SYNOPSIS
@@ -11,25 +11,24 @@ Ce manuel est destiné aux utilisateurs qui souhaitent aller au delà de la
 commande \fBdpkg --help\fP pour la compréhension des options de la ligne
 de commande et des états des paquets.
 
+.PP
 Les responsables de paquet qui veulent comprendre comment \fBdpkg\fP 
-installe leur paquet \fIne doivent pas\fP l'utiliser. Les descriptions de
-\fBdpkg\fP concernant l'installation ou la désinstallation des paquets
-sont très insuffisantes. Dans le système « GNU Info » vous trouverez, sous
-la rubrique \fIPackage Management System\fP de la \fIdebian-faq\fP, des
-renseignements plus détaillés à ce sujet. Voyez aussi la rubrique 
-\fIDebian Package Management Tools\fP pour des renseignements sur la
-création de paquets Debian.
+installe leur paquet \fIne doivent pas\fP l'utiliser. Les descriptions
+concernant l'installation ou la désinstallation des paquets
+sont très insuffisantes. 
+.PP
+Vous trouverez des renseignements sur ce sujet dans la Faq Debian ou dans
+la référence Debian, aux rubriques concernant la création de paquets.
 
 .SH DESCRIPTION
 \fBdpkg\fP est un outil de niveau intermédiaire pour l'installation, la 
 création, la suppression et la gestion des paquets Debian. 
-\fBDselect\fP(8) est la principale interface à \fBdpkg\fP et la plus
-agréable pour l'utilisateur. \fBdpkg\fP lui-même est entièrement contrôlé par
+\fBdpkg\fP lui-même est entièrement contrôlé par
 des paramètres sur la ligne de commande, laquelle comprend exactement une
 action et zéro ou plusieurs options. Le paramètre « action » dit ce que
 \fBdpkg\fP doit faire et les options modifient l'action d'une manière
 ou d'une autre.
-
+.PP
 On peut aussi utiliser \fBdpkg\fP comme une interface à \fBdpkg-deb\fP.
 Quand \fBdpkg\fP rencontre les actions suivantes, qui sont des actions
 de \fBdpkg-deb\fP, il lance simplement \fBdpkg-deb\fP avec les
@@ -45,6 +44,11 @@ paramètres qui lui ont été fournis :
     \fB--fsys-tarfile\fP.
 .fi
 Voyez \fBdpkg-deb\fP(1) pour des renseignements sur ces actions.
+.PP
+Note : \fBdselect\fP(8) est la principale interface à \fBdpkg\fP et la plus
+agréable à l'utilisateur. Il en existe d'autres, comme celles basées sur
+\fBapt\fP(8).
+
 
 .SH RENSEIGNEMENTS SUR LES PAQUETS
 \fBdpkg\fP conserve des renseignements utiles sur les paquets disponibles.
@@ -150,7 +154,6 @@ restaurer si quelque chose se passe mal.
 
 \fB2.\fP exécution du script \fBpostinst\fP, s'il est fourni par le
 paquet.
-.br
 .TP
 \fBdpkg -r\fP | \fB--remove\fP | \fB-P\fP | \fB--purge \fP\fIpaquet\fP ... | \fB-a\fP | \fB--pending\fP
 Supprime un paquet installé. L'action \fB-r\fP ou \fB--remove\fP supprime 
@@ -177,10 +180,6 @@ La suppression des paquets comporte les étapes suivantes :
 \fB3.\fP lancement du script \fIpostrm\fP 
 .br
 .TP
-.BI "dpkg  -p|--print-avail " paquet
-Affiche des renseignements détaillés sur \fIpaquet\fP, tels qu'ils sont
-trouvés dans le fichier \fI/var/lib/dpkg/available\fP.
-.TP
 \fBdpkg --update-avail\fP | \fB--merge-avail\fP \fIfichier-paquet\fP
 Met à jour les idées de \fBdpkg\fP et de \fBdselect\fP sur les paquets 
 disponibles. L'action \fB--merge-avail\fP combine les informations
@@ -203,20 +202,6 @@ Oublie ce qui concerne les paquets non installés ou non disponibles.
 .B dpkg --clear-avail
 Efface les renseignements existants concernant les paquets disponibles.
 .TP
-\fBdpkg -l\fP | \fB--list\fP \fIpaquet-nom-motif\fP ...
-Affiche la liste des paquets qui correspondent au motif donné. Quand on
-ne fournit pas de \fIpaquet-nom-motif\fP, la liste comporte tous les 
-paquets cités dans \fI/var/lib/dpkg/available\fP.  Les métacaractères
-ordinaires du shell sont autorisés dans \fIpaquet-nom-motif\fP. (Il faudra
-sans doute mettre \fIpaquet-nom-motif\fP entre apostrophes pour éviter 
-l'expansion des noms de fichier par le shell. Par exemple, la commande
-\fBdpkg -l 'libc5*'\fP affiche tous les paquets dont le nom commence par
-«\ libc5\ ».)
-.TP
-\fBdpkg -s\fP | \fB--status\fP \fInom-de-paquet\fP ...
-Rapporte l'état du paquet indiqué. C'est simplement l'affichage de l'entrée
-de la base de données concernant les états des paquets installés.
-.TP
 \fBdpkg -C\fP | \fB--audit\fP
 Recherche les paquets qui n'ont été que partiellement installés sur le 
 système. \fBdpkg\fP suggère une manière de les faire fonctionner.
@@ -231,15 +216,6 @@ fixe les sélections des paquets en lisant un fichier sur l'entrée standard.
 .B dpkg --yet-to-unpack
 Recherche les paquets qui ont été sélectionnés pour l'installation, mais qui
 pour une raison quelconque, ne sont pas encore installés.
-.TP
-\fBdpkg -L\fP | \fB--listfiles\fP \fIpaquet\fP ...
-Affiche la liste des fichiers de \fIpaquet\fP installés sur le système.
-Il faut remarquer cependant que les fichiers créés par les scripts d'
-installation particuliers au paquet ne sont pas affichés.
-.TP
-\fBdpkg -S\fP | \fB--search\fP \fImotif-de-recherche\fP ...
-Recherche un nom de fichier dans les paquets installés. On peut utiliser
-dans le motif tous les métacaractères du shell.
 .TP
 .B dpkg --print-architecture
 Affiche l'architecture cible (par exemple, « i386 »). Cette option utilise
@@ -270,7 +246,7 @@ ligne de commande à travers ce descripteur de fichier ne sont pas redéfinies
 pour les commandes suivantes qui sont exécutées pendant la même séquence.
 .TP
 .B dpkg --help
-Affiche un court message d'aide.
+Affiche les commandes utilisables.
 .TP
 .B dpkg --force-help
 donne des renseignements sur les options \fB--force-\fP\fIquelque-chose\fP.
@@ -279,7 +255,7 @@ donne des renseignements sur les options \fB--force-\fP\fIquelque-chose\fP.
 donne des renseignements sur les options de débogage.
 .TP
 \fBdpkg --licence\fP | \fBdpkg --license\fP
-Affiche la licence de \fBdpkg\fP.
+Affiche les informations sur le copyright et la licence de \fBdpkg\fP.
 .TP
 \fBdpkg --version\fP
 Affiche la version de \fBdpkg\fP.
@@ -307,6 +283,27 @@ actions suivantes.
     Extrait et affiche les noms des fichiers d'un paquet.
 .fi
 
+.TP
+\fBdpkg-query-actions\fP
+Voyez \fBdpkg-query\fP(1) pour davantage d'explications sur les actions
+suivantes.
+
+.nf
+
+\fBdpkg -l\fP | \fB--list\fP \fIpaquet-nom-motif\fP ...
+    Affiche la liste des paquets qui correspondent au motif.
+\fBdpkg -s\fP | \fB--status\fP \fIpaquet-nom\fP ...
+    Donne le statut du paquet indiqué.
+\fBdpkg -L\fP | \fB--listfiles\fP \fIpackage\fP ...
+    Affiche la liste des fichiers installés qui appartiennent 
+    à \fBpaquet\fP.
+\fBdpkg -S\fP | \fB--search\fP \fIfichier-search-motif\fP ...
+    Recherche un fichier dans les paquets installés.
+\fBdpkg -p\fP | \fB--print-avail\fP \fIpaquet\fP
+    Affiche les informations trouvées dans \fI/var/lib/dpkg/available\fP
+    à propos de \fIpackage\fP.
+.fi
+
 .SH OPTIONS
 On peut spécifier une option à la fois sur la ligne de commande et dans le
 fichier de configuration de dpkg, \fI/etc/dpkg/dpkg.cfg\fP. Chaque ligne de
@@ -321,34 +318,39 @@ Modifie le nombre d'erreurs au delà duquel dpkg s'arrête. il est par défaut
 .BR -B | --auto-deconfigure
 Quand un paquet est supprimé, il peut arriver qu'un paquet installé
 dépendait du paquet supprimé. En spécifiant cette option, on
-obtient la déconfiguration automatique du paquet qui dépendait du paquet 
+obtient la dé-configuration automatique du paquet qui dépendait du paquet 
 supprimé.
 .TP
-\fB-D\fIoctal\fP | \fB--debug=\fP\fIoctal\fP
-demande de débogage. \fIoctal\fP est formé en faisant un « ou » logique entre
+\fB-D\fP\fIoctal\fP | \fB--debug=\fP\fIoctal\fP
+Demande de débogage. \fIoctal\fP est formé en faisant un « ou » logique entre
 des valeurs souhaitées appartenant à la liste ci-dessous (notez que ces 
-valeurs peuvent changer dans de prochaines versions). \fB-Dh\fP or \fB--debug=help\fP affiche ces valeurs de débogage.
+valeurs peuvent changer dans de prochaines versions). 
+\fB-Dh\fP or \fB--debug=help\fP affiche ces valeurs de débogage.
 
  nombre  description
-    1   Généralement, informations de progression utiles
+    1   Généralement, informations de progression 
+        utiles
     2   Appel et état des scripts du développeur
    10   Sortie pour chaque fichier traité
-  100   De nombreuses sorties pour chaque fichier traité
+  100   De nombreuses sorties pour chaque fichier 
+        traité
    20   Sortie pour chaque fichier de configuration
-  200   De nombreuses sorties pour chaque fichier de configuration
+  200   De nombreuses sorties pour chaque fichier 
+        de configuration
    40   Dépendances et conflits
-  400   De nombreuses sorties pour les dépendances et les conflits
- 1000   Beaucoup de radotage à propos du répertoire dpkg/info 
+  400   De nombreuses sorties pour les dépendances 
+        et les conflits
+ 1000   Beaucoup de radotage à propos du répertoire 
+        dpkg/info 
  2000   Quantité stupide de radotage
 .TP
 \fB--force-\fP\fIquelque-chose\fP | \fB--no-force-\fP\fIquelque-chose\fP | \fB--refuse-\fP\fIquelque-chose\fP
-
 Forcer ou refuser (\fBno-force\fP et \fBrefuse\fP signifient la même chose)
 de faire quelque chose. \fIquelque-chose\fP est une liste de choses séparées
 par des virgules, choses qui sont décrites ci-après. \fB--force-help\fP 
 affiche un message qui les décrit. Les choses marquées d'un (*) sont
 forcées par défaut.
-
+.PP
 \fIAvertissement : Ces options sont principalement destinées aux experts.
 Un usage auquel manque la pleine compréhension de leurs effets
 peut casser le système entier.\fP
@@ -362,6 +364,13 @@ Sélectionner les paquets pour l'installation, ou la désinstallation.
 \fBdowngrade\fP(*):
 Installer un paquet, même si une version plus récente du paquet est déjà
 installée.
+
+\fIAvertissement : Pour l'instant, dpkg ne recherche pas les dépendances
+lors d'un retour à une version inférieure d'un paquet ; il ne vous préviendra
+pas si la version choisie casse les dépendances d'un autre paquet. Cela peut
+avoir de sérieuses conséquences si l'on revient à des versions antérieures des
+programmes essentiels du système et rendre votre système inutilisable. À
+utiliser avec précaution.\fP
 
 \fBconfigure-any\fP:
 Configurer aussi les paquets dépaquetés mais non configurés dont dépend le
@@ -448,10 +457,10 @@ Ne pas lire ni vérifier le contenu du fichier de contrôle pendant la
 construction d'un paquet.
 C'est une option de \fBdpkg-deb\fP(1).
 .TP
-.B --no-act
+.\fB--no-act\fP | \fB--dry-run\fP | \fB--simulate\fP
 Faire tout ce qui doit être fait, mais n'écrire aucune modification. On 
 utilise cette option pour voir ce qui se passe sans modifier quoi que ce soit.
-
+.PP
 Assurez vous de donner l'option \fB--no-act\fP avant le paramètre action,
 sinon des résultats fâcheux pourraient arriver. Par exemple, la commande
 \fBdpkg --purge foo --no-act\fP purge d'abord le paquet foo et essaye ensuite
@@ -483,7 +492,7 @@ comme le répertoire de root. Changer \fBroot\fP change \fBinstdir\fP en
 Traiter seulement les paquets qui sont sélectionnés pour l'installation. 
 La sélection est réellement faite par \fBdselect\fP ou par \fBdpkg\fP quand il
 manipule les paquets.  Par exemple, quand un paquet est supprimé, il est
-marqué comme ayant été sélectionné pour l'installation.
+marqué comme ayant été sélectionné pour une désinstallation.
 .TP
 .BR -E " | " --skip-same-version
 Ne pas installer le paquet si la même version du paquet est déjà
@@ -550,69 +559,70 @@ démarre un shell pour examiner un fichier de configuration modifié ; elle est
 fixée par \fBdpkg\fP.
 
 .SH EXEMPLES
-Pour afficher les paquets liés à l'éditeur vi :
+Pour afficher les paquets dont le nom contient la chaîne 'vi' :
 .br
 \fB     dpkg -l '*vi*'\fP
 .br
-
-Pour voir les entrées de \fI/var/lib/dpkg/available\fP concernant deux
+.PP
+Pour voir les entrées de \fI/var/lib/dpkg/available\fP concernant plusieurs
 paquets :
-.br
-\fB     dpkg --print-avail elvis vim | less\fP
-.br
-
-Pour rechercher vous-même dans la liste des paquets :
-.br
-\fB     less /var/lib/dpkg/available\fP
-.br
-
+\fB     dpkg -p base-files login xfree86-common | pager\fP
+.PP
 Pour supprimer le paquet installé « elvis » :
 .br
 \fB     dpkg -r elvis\fP
-.br
-
+.PP
 Pour installer un paquet, vous devez d'abord le trouver dans une archive
-ou sur un cédérom. Le fichier des « available » montre que le paquet 
+ou sur un cédérom. Le fichier « available » montre que le paquet 
 « vim » se trouve dans la section « editors » :
 .br
 \fB     cd /cdrom/hamm/hamm/binary/editors\fP
 \fB     dpkg -i vim_4.5-3.deb\fP
 .br
-
+(Note : Beaucoup se servent de \fBapt-get\fP(8) pour cela.)
+.PP
 Pour faire une copie locale des états de sélection des paquets :
 .br
 \fB     dpkg --get-selections >myselections\fP
-.br
+.PP
 On remarquera que cela n'installe ou supprime rien du tout ; cela ne fait
 que déterminer l'état de sélection des paquets requis. Vous aurez besoin
 d'autres applications pour transférer et installer réellement les paquets
-requis.
-
+requis. Par exemple, exécutez \fBdselect\fP et choisissez "Install".
+.PP
 Vous pourriez transférer ce fichier sur un autre ordinateur et l'installer de
 cette manière :
 .br
 \fB     dpkg --set-selections <myselections\fP
-.br
-
+.PP
 Habituellement, vous trouverez que \fBdselect\fP(8) fournit une
-façon plus aisée de changer les états de sélection des paquets.
-.br
+façon plus aisée de modifier les états de sélection des paquets.
+
 .SH VOIR AUSSI
-\fBdselect\fP(8),
-\fBdpkg-deb\fP(1),
-\fBdeb\fP(5),
-et
-\fBdeb-control\fP(5)
+.BR dpkg-deb (1),
+.BR deb (5),
+.BR deb-control (5),
+.BR dselect (8),
+.BR apt (8).
 
-.SH BOGUES
-
-\fB--no-act\fP donne habituellement moins d'information que ce qui serait
-nécessaire.
+.SH BOGUES ET RESTRICTIONS
+dpkg n'ordonne pas l'installation des paquets.
+.br
+dpkg ne fournit pas une manière automatique de se loguer.
+.br
+Lors de mises à niveau, les relations de dépendance d'un paquet peuvent ne plus
+correspondre (p.ex. les dépendances exactes d'un paquet -dev de bibliothèques
+par rapport au paquet comprenant les bibliothèques).
+.PP
+L'option --no-act ne donne pas assez d'informations utiles.
+.br
+L'action --status ne donne pas d'information sur les paquets virtuels.
 
 .SH AUTEURS
 .nf
-Voyez le fichier \fB/usr/share/doc/dpkg/THANKS\fP pour la liste des
-personnes qui ont contribué à \fBdpkg\fP.
+\fBdpkg\fP fut d'abord écrit par Ian Jackson, puis mis à jour par beaucoup
+d'autres gens. Voyez le fichier \fB/usr/share/doc/dpkg/THANKS.gz\fP pour la 
+liste des personnes qui ont contribué à \fBdpkg\fP.
 .fi
 .SH "TRADUCTION"
-Philippe Batailler <pbatailler@teaser.fr> 2002.
+Philippe Batailler <pbatailler@teaser.fr> 2003.
