--- a/man/fr/start-stop-daemon.8
+++ b/man/fr/start-stop-daemon.8
@@ -21,11 +21,11 @@ start\-stop\-daemon \- lance ou arrête des démons-systèmes
 .SH DESCRIPTION
 On se sert de
 .B start\-stop\-daemon
-pour contrôler la création ou l'arrêt de processus-systèmes.
+pour contrôler la création ou l'arrêt de processus-système.
 On peut configurer
 .B start\-stop\-daemon
 avec les options
-.BR --exec ", " --pidfile ", " --user ", et " --name ",
+.BR --exec ", " --pidfile ", " --user ", et " --name 
 pour trouver les exemplaires présents d'un processus en fonctionnement.
 
 Avec l'action
@@ -70,7 +70,7 @@ est précisé).
 .SH OPTIONS
 
 .TP
-\fB-x\fP|\fB--exec\fP \fIexecutable\fP
+\fB-x\fP|\fB--exec\fP \fIexécutable\fP
 Cherche les processus qui sont des exemplaires de cet exécutable (selon
 .B /proc/\fIpid\fB/exe\fP).
 .TP
@@ -83,6 +83,9 @@ Cherche les processus qui appartiennent à l'utilisateur défini par
 .I nom-d-utilisateur 
 ou
 .IR uid.
+.TP
+\fB-g\fP|\fB--group\fP \fIgroup\fP|\fIgid\fP
+Modifie le \fIgroup\fP ou le \fIgid\fP au début du processus.
 .TP
 \fB-n\fP|\fB--name\fP \fInom-de-processus\fP
 Cherche les processus dont le nom est
@@ -175,6 +178,12 @@ Change de répertoire racine pour
 avant de lancer le processus. Remarquez que le « pidfile » est aussi écrit
 après le changement de racine.
 .TP
+\fB-d\fP|\fB--chdir\fP \fIpath\fP
+Change de répertoire pour
+.I chemin
+avant de commencer le processus. Cela est fait avant le changement de
+répertoire racine si l'option \fB-r\fP|\fB--chroot\fP est demandée.
++.TP
 .I -b | --background
 est utilisé de manière classique pour les programmes qui ne « se détachent » 
 pas d'eux-mêmes. Cette option oblige
@@ -190,7 +199,7 @@ C'est un expédient dont on se servira seulement pour des programmes dont la
 duplication n'a pas de sens ou bien des programmes dont le code 
 n'est pas transformable pour leur ajouter cette fonctionnalité.
 .TP
-.BR -N | --nicelevel
+\fB-N\fP|\fB--nicelevel\fP \fIint\fP.
 Cela modifie la priorité du processus avant qu'il ne soit lancé.
 .TP
 .I -m | --make-pidfile
@@ -219,9 +228,7 @@ Affiche le numéro de version et se termine.
 
 .SH AUTEURS
 Ian Jackson <ian@chiark.greenend.org.uk>
-
 Marek Michalkiewicz <marekm@i17linuxb.ists.pwr.wroc.pl>
-
 Page de manuel par Klee Dienes <klee@mit.edu>.
 .SH TRADUCTION
-Philippe Batailler <pbatailler@teaser.fr>, Mai 2002.
+Philippe Batailler <pbatailler@teaser.fr>, Octobre 2003.
