--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ dpkg (1.10.20) unstable; urgency=low
   * Update French translation.  Closes: #218713
   * Fix spelling error in German md5sum man page.  Closes: #230750
   * Fix typo in pt_BR po file.  Closes: #192102
+  * Revert fix for #232916, this turns out to be a bug in the pgpgp
+    wrapper, dpkg worked fine with pgp itself.
 
  -- Scott James Remnant <scott@netsplit.com>  UNRELEASED
 
