Add two new japanese manual pages.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Mar 11 11:23:09 GMT 2004 Scott James Remnant <scott@netsplit.com>
+
+  * man/ja/Makefile.in: Add new pages to Makefile.in so they get
+  installed.
+
 Thu Mar 11 11:18:29 GMT 2004 Scott James Remnant <scott@netsplit.com>
 
   * scripts/dpkg-buildpackage.sh: Revert change suggested by Javier
