--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.10.21) unstable; urgency=low
+
+  * 
+
+ -- Scott James Remnant <scott@netsplit.com>  UNRELEASED
+
 dpkg (1.10.20) unstable; urgency=high
 
   * Update Japanese translation.  Closes: #224616
