Updated Catalan translation.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Mar 28 18:32:19 CEST 2004 Jordi Mallach <jordi@debian.org>
+
+  * po/ca.po: Update Catalan translation.
+
 Fri Mar 12 19:02:21 GMT 2004 Scott James Remnant <scott@netsplit.com>
 
   * main/remove.c (removal_bulk_remove_configfiles): Don't change the
